Bug 1725573 - Add color profile remoting for GTK. r=aosmond,perftest-reviewers,AlexandruIonescu

Previously, content processes would try to contact the X server
directly during startup to read color calibration information; with
`dom.ipc.avoid-gtk` this doesn't work because the process is in headless
mode.  This patch extends the color profile IPC facility added in bug
1540776 for Windows sandboxing (win32k lockdown) to GTK under X11.
(Currently there's no support for color management under Wayland, so
there's nothing for this patch to fix in that case.)

Differential Revision: https://phabricator.services.mozilla.com/D124507